     find -name "*.hh" -o -name "*.cc" | \
       xargs sed -i "
         s/Dumux::/Ewoms::/g;
         s/namespace Dumux/namespace Ewoms/;
         s/\(include.*\)dumux\(.*\)/\1ewoms\2/;
         s/DUMUX/EWOMS/"
     # adapt the build system
     find -name "Makefile.am" -o -name "configure.ac" | \
       xargs sed -i "s/dumux/ewoms/g"

  - Run dunecontrol for your project and re-compile.

- The concept of Newton controllers has been abandoned. The
  functionality previously implemented has been folded into the
  NewtonMethod classes which now use static polymorphism. The reason
  for this change is that this makes the Newton solver use the same
  design as used by the rest of eWoms, and that the original reason to
  split the policy from the algorithmic part of the Newton method was
  not required. (The reason was to be able to implement different
  policies with zero overhead, but all implemented Newton controllers
  were just derived from NewtonController.) Also, the following
  properties have been renamed during the exercise:
   - NewtonRelTolerance -> NewtonRelativeTolerance
   - NewtonAbsTolerance -> NewtonAbsoluteTolerance
   - NewtonMaxSteps -> NewtonMaxIterations
   - NewtonTargetSteps -> NewtonTargetIterations
   - NewtonMaxRelError -> NewtonMaxRelativeError
   - NewtonSatisfyAbsAndRel -> NewtonSatisfyAbsoluteAndRelative

Notable Differences Between DuMuX 2.1 and eWoms 2.2
===================================================

- The minumim required version of the Dune core modules is now
  2.2. This means that eWoms will no longer compile with Dune 2.1.
- eWoms now compiles with the LLVM-CLang compiler. The minimum version
  required is CLang 3.1.
- Support for compilers that don't support the 'auto' keyword and
  initializer lists has been dropped. As a consequence eWoms will not
  compile with GCC prior to version 4.4.
- The abstractions between problems, flow models, discretization