@@ -1,8 +1,4 @@
 # tests where program to build and program to run are equal
-check_PROGRAMS = test_propertysystem
-
 EXTRA_DIST = CMakeLists.txt
-
-test_propertysystem_SOURCES = test_propertysystem.cc 
 
 include $(top_srcdir)/am/global-rules
