@@ -1,7 +1,3 @@
-check_PROGRAMS = test_spline
-
 EXTRA_DIST = CMakeLists.txt
-
-test_spline_SOURCES = test_spline.cc
 
 include $(top_srcdir)/am/global-rules
