@@ -1,10 +1,4 @@
-# tests where program to build and program to run are equal
-check_PROGRAMS = test_diffusion test_1p
-
 noinst_HEADERS = *.hh
 EXTRA_DIST= CMakeLists.txt
-
-test_diffusion_SOURCES = test_diffusion.cc
-test_1p_SOURCES = test_1p.cc
 
 include $(top_srcdir)/am/global-rules
