@@ -1,11 +1,4 @@
-check_PROGRAMS = test_impes test_impesadaptive test_transport test_mpfa2p
-
 noinst_HEADERS = *.hh
 EXTRA_DIST= grids/*.dgf CMakeLists.txt
-
-test_impes_SOURCES = test_impes.cc
-test_impesadaptive_SOURCES = test_impesadaptive.cc
-test_transport_SOURCES = test_transport.cc
-test_mpfa2p_SOURCES = test_mpfa2p.cc
 
 include $(top_srcdir)/am/global-rules
