@@ -1,7 +1,3 @@
-check_PROGRAMS = test_fluidsystems
-
-test_fluidsystems_SOURCES = test_fluidsystems.cc
-
 EXTRA_DIST=CMakeLists.txt
 noinst_HEADERS=*.hh
 include $(top_srcdir)/am/global-rules
