@@ -1,6 +1,2 @@
-check_PROGRAMS = test_immiscibleflash
-
-test_immiscibleflash_SOURCES = test_immiscibleflash.cc
-
 EXTRA_DIST=CMakeLists.txt
 include $(top_srcdir)/am/global-rules
