@@ -1,6 +1,2 @@
-check_PROGRAMS = test_ncpflash
-
-test_ncpflash_SOURCES = test_ncpflash.cc
-
 EXTRA_DIST=CMakeLists.txt
 include $(top_srcdir)/am/global-rules
