@@ -1,6 +1,2 @@
-check_PROGRAMS = test_pengrobinson
-
-test_pengrobinson_SOURCES = test_pengrobinson.cc
-
 EXTRA_DIST=CMakeLists.txt
 include $(top_srcdir)/am/global-rules
