@@ -1,6 +1,2 @@
-check_PROGRAMS = test_tabulation
-
-test_tabulation_SOURCES = test_tabulation.cc
-
 EXTRA_DIST=CMakeLists.txt
 include $(top_srcdir)/am/global-rules
